Take user password as a parameter.  Lots of cleanup.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,6 @@ workflows:
           filters:
             branches:
               only:
-                - dev
+                - master
     jobs:
       - test-android
