Update readme (+86 squashed commits) Squashed commits: [1a6bc5c] no message [8c5b77b] Test everything [cac2e0b] no message [0b23a12] no message [959a0ef] no message [f58aa10] no message [cb2cf4a] no message [3f8bf8b] Fix bash issue with getting firebase results. [329da3e] no message [91e2e6b] no message [813a7c4] no message [57cf16f] no message [5c7d5ea] no message [ddf3168] no message [e3f5443] Fix reporting [3f7635f] no message [6da3528] no message [0c85e2c] no message [fd35210] no message [dea2700] Fix java results bucket name.  Fix android not fetching all results.  Fix test count/reporting. [15e87e2] no message [ff8bf99] Fix native api 23 tests.  Name jobs.  Update to xcode 10.3 + paramaterize mac executor [1e3dfd0] Fix firebase webview issues [a4a47dc] no message [2b2d5bf] no message [2e0095b] Fix iOS device issue.  Finally get Android fully working.  Cleanup Android tests. [d6119b9] typo [336f17e] FIREBASE!!! [484b4b3] fix cordova [7bd11cb] no message [7fde348] no message [6d203d1] no message [3fb8e09] Fix typo [0096907] Test parallelized android [a671873] no message [9f0a500] no message [9eacdb1] no message [73ec875] no message [686d7d3] Test CircleCi 2.1 [e8699c6] CircleCI 2.1 [52219a6] no message [da11be9] Trigger Crash UiWatcher before run starts. [be24a23] Add UiWatcher [e217cce] no message [c16698c] no message [05322e2] no message [bebf452] no message [1b3d085] no message [a8e5f2b] no message [c0fcdb4] no message [0f2676b] no message [3e22c5b] no message [8da4ef7] no message [3409567] no message [1f225cb] no message [3aab2c8] one more time [adcd5e7] restore avd internet access [33f3f6e] increase wait for login screen [8bfe88b] F [b8c3505] ffff [7d8e8c4] fff [8f5842c] ff [e45963f] f [c4aa572] werweaedasdcfaxfasdfasfas [e989ada] yaml typo [5ef414d] Fix test failure [c4f91ea] increase wait for element timeout on android [4d4b58e] Run all Android skews [97c861a] Fix adb issue [aa50d0d] Fix fastlane setup issue [00cda47] Fix java env issue.  Run Android test

--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ test_output/
 Android/screenshots/
 
 # XCode User Data
-iOS/MobileSDKUITest.xcodeproj/project.xcworkspace/xcuserdata/
-iOS/MobileSDKUITest.xcodeproj/xcuserdata/
+iOS/SalesforceMobileSDK-UITest.xcodeproj/project.xcworkspace/xcuserdata/
+iOS/SalesforceMobileSDK-UITest.xcodeproj/xcuserdata/
