--- a/iOS/SalesforceMobileSDK-UITest.xcodeproj/xcshareddata/xcschemes/TestLogin.xcscheme
+++ b/iOS/SalesforceMobileSDK-UITest.xcodeproj/xcshareddata/xcschemes/TestLogin.xcscheme
@@ -51,6 +51,7 @@
       </MacroExpansion>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = ""
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
