--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
 aliases:
+  - &latest-ios
+    "12.2"
+  - &min-ios
+    "11.4"
+
   - &upgrade-git
     name: Update Git
     command:  |
       git --version
+      sudo apt-get update
       sudo apt-get install \
         build-essential flex bison \
         libreadline6-dev zlib1g-dev \
@@ -13,13 +19,11 @@ aliases:
         tcl-dev gettext \
         asciidoc \
         docbook2x
-
       wget https://www.kernel.org/pub/software/scm/git/git-2.13.0.tar.gz
       tar -xvzf git-2.13.0.tar.gz
       cd git-2.13.0
       sudo ./configure
       sudo make && sudo make install
-      git --version
 
   - &setup
     name: Setup
@@ -28,167 +32,160 @@ aliases:
 
   - &install-ant
     name: Install Ant
-    command: brew install ant
+    command: HOMEBREW_NO_AUTO_UPDATE=1 brew install ant
 
-linux: &linux
-  working_directory: ~/SalesforceMobileSDK-UITest
-  docker:
-    - image: circleci/android:api-27-node8-alpha
-  environment:
-    - TERM: "dumb"
-    - ADB_INSTALL_TIMEOUT: 15
-    - _JAVA_OPTIONS: "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-    - GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-XX:+HeapDumpOnOutOfMemoryError"'
-    - ANDROID_NDK: '/opt/ndk/android-ndk-r10e'
-    - BUILD_THREADS: 2
+  - &gcloud-auth
+    name: Authorize gcloud and set config defaults
+    command:  |
+        echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ${HOME}/gcloud-service-key.json
+        gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+        gcloud --quiet config set project mobile-apps-firebase-test
+        
+  - &get-firebase-results
+    name: Copy test results data
+    command: |
+        mkdir -p firebase/results
+        gsutil -m cp -r gs://test-lab-w87i9sz6q175u-kwp8ium6js0zw/UITest-<< parameters.app_type >>-${CIRCLE_BUILD_NUM} ./firebase/ || true
 
-#mac: &mac
-#  working_directory: ~/SalesforceMobileSDK-Package
-#  macos:
-#    xcode: "9.2.0"
-#  shell: /bin/bash --login -eo pipefail
+        count=0
+        for result in $(find ./firebase/ -name 'test_result*'); do
+            mv $result "./firebase/results/result${count}.xml" && (( count++ )) || true 
+        done
+    when: always
 
-version: 2
+executors:
+    linux:
+        working_directory: ~/SalesforceMobileSDK-UITests
+        docker:
+            - image: circleci/android:api-28-node
+        environment:
+            - TERM: "dumb"
+            - GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+    mac:
+        parameters:
+            xcode:
+                type: string
+                default: "10.3.0"
+        working_directory: ~/SalesforceMobileSDK-UITests
+        macos:
+            xcode: << parameters.xcode >>
+        shell: /bin/bash --login -eo pipefail
+    
+
+version: 2.1
 jobs:
   test-android:
-    <<: *linux
+    executor: linux
+    parameters:
+      app_type: 
+        type: string
+        default: "native"
     steps:
       - checkout
-      - run:
-          name: Start Emulator
-          command: source .circleci/avd_helper.sh && startAVD
-          background: true
       - run: *upgrade-git
       - run: *setup
-      - run:
-          name: Wait for Emulator
-          command: source .circleci/avd_helper.sh && waitForAVD
-
-      - run:
-          name: Test Native Java App
-          command: cd .circleci && fastlane android type:native
+      - run: *gcloud-auth
+      - run: 
+          name: Test << parameters.app_type >> Android
+          command: cd .circleci && fastlane android type:<< parameters.app_type >>
           when: always
-          no_output_timeout: 900
+      - run: *get-firebase-results
       - store_artifacts:
-          path: tmp*/nativeandroidApp/app/build/outputs/apk/
-          destination: Java
-      - store_artifacts:
-          path: Android/app/build/reports/androidTests/connected/
-          destination: Java
-      - store_artifacts:
-          path: /home/circleci/.fastlane/latest_crash.json
-          destination: Java
-      - store_artifacts:
-          path: Android/screenshots/native/login.png
-          destination: Java
-      - store_test_results:
-          path: Android/app/build/outputs/androidTest-results/
-
-      - run:
-          name: Test Native Kotlin App
-          command: cd .circleci && fastlane android type:native_kotlin
+          path: firebase
           when: always
-          no_output_timeout: 900
-      - store_artifacts:
-          path: tmp*/native_kotlinandroidApp/app/build/outputs/apk/
-          destination: Kotlin
-      - store_artifacts:
-          path: Android/app/build/reports/androidTests/connected/
-          destination: Kotlin
-      - store_artifacts:
-          path: /home/circleci/.fastlane/latest_crash.json
-          destination: Kotlin
-      - store_artifacts:
-          path: Android/screenshots/native_kotlin/login.png
-          destination: Kotlin
       - store_test_results:
-          path: Android/app/build/outputs/androidTest-results/
-
-      - run:
-          name: Test Hybrid Local App
-          command: cd .circleci && fastlane android type:hybrid_local
+          path: firebase/results
           when: always
-          no_output_timeout: 900
-      - store_artifacts:
-          path: tmp*/hybrid_localandroidApp/platforms/android/app/build/outputs/apk/
-          destination: Hybrid_Local
-      - store_artifacts:
-          path: Android/app/build/reports/androidTests/connected/
-          destination: Hybrid_Local
-      - store_artifacts:
-            path: /home/circleci/.fastlane/latest_crash.json
-            destination: Hybrid_Local
-      - store_artifacts:
-            path: Android/screenshots/hybrid_local/login.png
-            destination: Hybrid_Local
-      - store_test_results:
-          path: Android/app/build/outputs/androidTest-results/
 
-      - run:
-          name: Test Hybrid Remote App
-          command: cd .circleci && fastlane android type:hybrid_remote
-          when: always
-          no_output_timeout: 900
-      - store_artifacts:
-          path: tmp*/hybrid_remoteandroidApp/platforms/android/app/build/outputs/apk/
-          destination: Hybrid_Remote
-      - store_artifacts:
-          path: Android/app/build/reports/androidTests/connected/
-          destination: Hybrid_Remote
-      - store_artifacts:
-          path: /home/circleci/.fastlane/latest_crash.json
-          destination: Hybrid_Remote
-      - store_artifacts:
-          path: Android/screenshots/hybrid_remote/login.png
-          destination: Hybrid_Remote
-      - store_test_results:
-          path: Android/app/build/outputs/androidTest-results/
+  test-ios:
+      executor: << parameters.e >>
+      parameters:
+        ios_version: 
+            type: string
+        device:
+            type: string
+        e:
+            type: executor
+      steps:
+        - checkout
+        - run: *setup
+        - run: *install-ant
+        - run:
+            name: Test Native Objective-C App
+            command: cd .circleci && fastlane ios type:native device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
+            when: always
+            no_output_timeout: 1200  
+        - run:
+            name: Test Native Swift App
+            command: xcrun swift -version && cd .circleci && fastlane ios type:native_swift device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
+            when: always
+            no_output_timeout: 1200
+        - run:
+            name: Test Hybrid Local App
+            command: cd .circleci && fastlane ios type:hybrid_local device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
+            when: always
+            no_output_timeout: 1200
+        - run:
+            name: Test Hyrbid Remote App
+            command: cd .circleci && fastlane ios type:hybrid_remote device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
+            when: always
+            no_output_timeout: 1200
+        - store_artifacts:
+            path: test_output
+        - store_test_results:
+            path: test_output
 
-
-#  test-ios:
-#      <<: *mac
-#      steps:
-#        - checkout
-#        - run: *setup
-#        - run: *install-ant
-#        - run:
-#            name: Build Native Objective-C App
-#            command: ./test/test_force.js --os=ios --apptype=native
-#            when: always
-#        - run:
-#            name: Build Native Swift App
-#            command: ./test/test_force.js --os=ios --apptype=native_swift
-#            when: always
-#        - run:
-#            name: Build Hybrid Local App
-#            command: ./test/test_force.js --os=ios --apptype=hybrid_local
-#            when: always
-#        - run:
-#            name: Build Hybrid Remote App
-#            command: ./test/test_force.js --os=ios --apptype=hybrid_remote
-#            when: always
-#        - run:
-#            name: Build React Native App
-#            command: ./test/test_force.js --os=ios --apptype=react_native
-#            no_output_timeout: 20m
-#            when: always
 
 workflows:
-  version: 2
-
   pr-build-all-apps:
     jobs:
-      - test-android
+      - test-android:
+          name: "Java"
+          app_type: "native"
+      - test-android:
+          name: "Kotlin"
+          app_type: "native_kotlin"
+      - test-android:
+          name: "Hybrid Local (Android)"
+          app_type: "hybrid_local"
+      - test-android:
+          name: "Hybrid Remote (Android)"
+          app_type: "hybrid_remote"
+      - test-ios:
+          name: iOS - Latest
+          e: 
+            name: mac
+            xcode: "10.2.1"
+          device: "iPhone XR"
+          ios_version: *latest-ios
+      - test-ios:
+          name: iOS - Min
+          e: 
+            name: mac
+            xcode: "10.2.1"
+          device: "iPhone X"
+          ios_version: *min-ios
 
   # Cron are on a timezone 8 hours ahead of PST
   # Build everything on Saturday Afternoon
-  weekly-build-all-apps:
-    triggers:
-      - schedule:
-          cron: "30 19 * * 6"
-          filters:
-            branches:
-              only:
-                - master
-    jobs:
-      - test-android
+#  weekly-build-all-apps:
+#    triggers:
+#      - schedule:
+#          cron: "30 19 * * 6"
+#          filters:
+#            branches:
+#              only:
+#                - master
+#    jobs:
+#      - test-android:
+#          API_LEVEL: 23
+#      - test-android:
+#          API_LEVEL: 26
+#      - test-android:
+#          API_LEVEL: 28
+#      - test-ios:
+#          device: "iPhone XR"
+#          ios_version: "12.2"
+#      - test-ios:
+#          device: "iPhone X"
+#          ios_version: "11.4"
