--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Android/screenshots/
 # XCode User Data
 iOS/SalesforceMobileSDK-UITest.xcodeproj/project.xcworkspace/xcuserdata/
 iOS/SalesforceMobileSDK-UITest.xcodeproj/xcuserdata/
+*/xcuserdata
