--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -16,13 +16,13 @@ buildscript {
 android {
     compileSdkVersion 29
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName '1.0'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
-    buildToolsVersion = '29.0.0 rc3'
+    buildToolsVersion = '29.0.2'
 }
 
 dependencies {
